rust-runtime-kafka/kafka/kr-kafka-ffi/include/kr_kafka.h

typedef struct {
 uint32_t struct_size;int32_t partition,leader,leader_epoch,error_code;
 uint32_t replica_count,isr_count,offline_count;
} kr_metadata_partition;
typedef struct kr_producer kr_producer;
int32_t kr_metadata_partitions(kr_producer*,uint64_t snapshot,uint32_t start,kr_metadata_partition*,uint32_t capacity,uint32_t *written);
int32_t kr_metadata_nodes(kr_producer*,uint64_t snapshot,uint32_t partition,uint32_t kind,uint32_t start,int32_t*,uint32_t capacity,uint32_t *written);
int32_t kr_metadata_string(kr_producer*,uint64_t snapshot,uint32_t broker,uint32_t kind,uint32_t start,uint8_t*,uint32_t capacity,uint32_t *written);
int32_t kr_buffer_acquire(kr_producer*,uint32_t,uint8_t**,uint64_t*);
int32_t kr_buffer_commit(kr_producer*,uint64_t,uint32_t);
int32_t kr_buffer_release(kr_producer*,uint64_t);