rust-runtime-kafka/kafka/kr-kafka-java/src/main/java/io/krkafka/ffi/kr_kafka_h.java


        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_metadata_partitions(kr_producer *, uint64_t snapshot, uint32_t start, kr_metadata_partition *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static FunctionDescriptor kr_metadata_partitions$descriptor() {
        return kr_metadata_partitions.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_metadata_partitions(kr_producer *, uint64_t snapshot, uint32_t start, kr_metadata_partition *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static MethodHandle kr_metadata_partitions$handle() {
        return kr_metadata_partitions.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_metadata_partitions(kr_producer *, uint64_t snapshot, uint32_t start, kr_metadata_partition *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static MemorySegment kr_metadata_partitions$address() {
        return kr_metadata_partitions.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_metadata_partitions(kr_producer *, uint64_t snapshot, uint32_t start, kr_metadata_partition *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static int kr_metadata_partitions(MemorySegment x0, long snapshot, int start, MemorySegment x3, int capacity, MemorySegment written) {
        var mh$ = kr_metadata_partitions.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_metadata_partitions", x0, snapshot, start, x3, capacity, written);
            }
            return (int)mh$.invokeExact(x0, snapshot, start, x3, capacity, written);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_metadata_nodes {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_LONG_LONG,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_metadata_nodes");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_metadata_nodes(kr_producer *, uint64_t snapshot, uint32_t partition, uint32_t kind, uint32_t start, int32_t *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static FunctionDescriptor kr_metadata_nodes$descriptor() {
        return kr_metadata_nodes.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_metadata_nodes(kr_producer *, uint64_t snapshot, uint32_t partition, uint32_t kind, uint32_t start, int32_t *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static MethodHandle kr_metadata_nodes$handle() {
        return kr_metadata_nodes.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_metadata_nodes(kr_producer *, uint64_t snapshot, uint32_t partition, uint32_t kind, uint32_t start, int32_t *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static MemorySegment kr_metadata_nodes$address() {
        return kr_metadata_nodes.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_metadata_nodes(kr_producer *, uint64_t snapshot, uint32_t partition, uint32_t kind, uint32_t start, int32_t *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static int kr_metadata_nodes(MemorySegment x0, long snapshot, int partition, int kind, int start, MemorySegment x5, int capacity, MemorySegment written) {
        var mh$ = kr_metadata_nodes.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_metadata_nodes", x0, snapshot, partition, kind, start, x5, capacity, written);
            }
            return (int)mh$.invokeExact(x0, snapshot, partition, kind, start, x5, capacity, written);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_metadata_string {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_LONG_LONG,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_metadata_string");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_metadata_string(kr_producer *, uint64_t snapshot, uint32_t broker, uint32_t kind, uint32_t start, uint8_t *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static FunctionDescriptor kr_metadata_string$descriptor() {
        return kr_metadata_string.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_metadata_string(kr_producer *, uint64_t snapshot, uint32_t broker, uint32_t kind, uint32_t start, uint8_t *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static MethodHandle kr_metadata_string$handle() {
        return kr_metadata_string.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_metadata_string(kr_producer *, uint64_t snapshot, uint32_t broker, uint32_t kind, uint32_t start, uint8_t *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static MemorySegment kr_metadata_string$address() {
        return kr_metadata_string.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_metadata_string(kr_producer *, uint64_t snapshot, uint32_t broker, uint32_t kind, uint32_t start, uint8_t *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static int kr_metadata_string(MemorySegment x0, long snapshot, int broker, int kind, int start, MemorySegment x5, int capacity, MemorySegment written) {
        var mh$ = kr_metadata_string.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_metadata_string", x0, snapshot, broker, kind, start, x5, capacity, written);
            }
            return (int)mh$.invokeExact(x0, snapshot, broker, kind, start, x5, capacity, written);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_buffer_acquire {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_buffer_acquire");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_buffer_acquire(kr_producer *, uint32_t, uint8_t **, uint64_t *)
     * }
     */
    public static FunctionDescriptor kr_buffer_acquire$descriptor() {
        return kr_buffer_acquire.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_buffer_acquire(kr_producer *, uint32_t, uint8_t **, uint64_t *)
     * }
     */
    public static MethodHandle kr_buffer_acquire$handle() {
        return kr_buffer_acquire.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_buffer_acquire(kr_producer *, uint32_t, uint8_t **, uint64_t *)
     * }
     */
    public static MemorySegment kr_buffer_acquire$address() {
        return kr_buffer_acquire.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_buffer_acquire(kr_producer *, uint32_t, uint8_t **, uint64_t *)
     * }
     */
    public static int kr_buffer_acquire(MemorySegment x0, int x1, MemorySegment x2, MemorySegment x3) {
        var mh$ = kr_buffer_acquire.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_buffer_acquire", x0, x1, x2, x3);
            }
            return (int)mh$.invokeExact(x0, x1, x2, x3);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_buffer_commit {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_LONG_LONG,
            kr_kafka_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_buffer_commit");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_buffer_commit(kr_producer *, uint64_t, uint32_t)
     * }
     */
    public static FunctionDescriptor kr_buffer_commit$descriptor() {
        return kr_buffer_commit.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_buffer_commit(kr_producer *, uint64_t, uint32_t)
     * }
     */
    public static MethodHandle kr_buffer_commit$handle() {
        return kr_buffer_commit.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_buffer_commit(kr_producer *, uint64_t, uint32_t)
     * }
     */
    public static MemorySegment kr_buffer_commit$address() {
        return kr_buffer_commit.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_buffer_commit(kr_producer *, uint64_t, uint32_t)
     * }
     */
    public static int kr_buffer_commit(MemorySegment x0, long x1, int x2) {
        var mh$ = kr_buffer_commit.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_buffer_commit", x0, x1, x2);
            }
            return (int)mh$.invokeExact(x0, x1, x2);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_buffer_release {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_buffer_release");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_buffer_release(kr_producer *, uint64_t)
     * }
     */
    public static FunctionDescriptor kr_buffer_release$descriptor() {
        return kr_buffer_release.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_buffer_release(kr_producer *, uint64_t)
     * }
     */
    public static MethodHandle kr_buffer_release$handle() {
        return kr_buffer_release.HANDLE;
    }
